Minor css and fix to Profile component to make sure the titles in the experience section line-wrap correctly.
Before it would line wrap with two-word locations such as San Francisco.

--- a/src/components/Profile.scss
+++ b/src/components/Profile.scss
@@ -46,10 +46,7 @@
   margin-right: auto;
 }
 
-/*  new stuff */
-.no-wrap {
-  white-space: nowrap;
-}
+
 
 .proficiency-title {
   -webkit-font-smoothing: antialiased;
@@ -77,6 +74,14 @@
   font-size: 12pt;
   color: white;
   margin-top: 20px;
+
+  .no-wrap {
+    white-space: nowrap;
+  }
+
+  .wrap {
+    white-space: normal;
+  }
 }
 
 
